# dart_ncnn_yolov8

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: app_lifecycle_observer.dart  main.dart
example/lib/pages/: camera_page.dart  home_page.dart
example/lib/providers/: my_camera_controller.dart  ncnn_yolo_controller.dart  ncnn_yolo_options.dart  ncnn_yolo_options.freezed.dart
example/lib/views/: detect_view.dart  photo_view.dart  picture_view.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: dart_ncnn_yolov8.podspec
lib/: dart_ncnn_flutter.dart  dart_ncnn_yolov8.dart  dart_ncnn_yolov8_bindings_generated.dart  yolo_result_painter.dart
lib/models/: detect_result.dart  detect_result.freezed.dart  models.dart  pixel_format.dart  yolo_result.dart  yolo_result.freezed.dart
linux/: CMakeLists.txt
macos/: dart_ncnn_yolov8.podspec
macos/Classes/: dart_ncnn_yolov8.c
src/: CMakeLists.txt  dart_ncnn_yolov8.cpp  dart_ncnn_yolov8.h
windows/: CMakeLists.txt
(+6 files in other folders)
